--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 	<body>
 		<div class="topnav-container">
 			<div class="topnav">
-				<a href="/" class="active" class="nav-left">
+				<a href="./" class="active" class="nav-left">
 					<i class="fab fa-youtube"></i> Home</a>
 				<a href="https://github.com/patricktouchette/youtube-specialized-feed" class="nav-right"><i class="fab fa-github"></i>  Github</a>
-				<a href="/about.html" class="nav-right">About</a>
-				<a href="channellist.html" class="nav-right">Channel List</a>
+				<a href="./about.html" class="nav-right">About</a>
+				<a href="./channellist.html" class="nav-right">Channel List</a>
 			</div>
 		</div>
 
