--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
 
 
 			</div>
-			<h2>This was built with:</h2>
+			<h2>This site was built with:</h2>
 
 			<div class="about-icons">
 				<div class="icons">
